[workspace]
members = [
  "crates/ast",
  "crates/lexer", 
  "crates/parser",
  "crates/value",
  "crates/interp",
  "crates/stdlib",
  "crates/engine",
  "crates/cli",
  "crates/wasm",
  # optional bindings:
  # "crates/capi", "crates/node", "crates/python", "crates/wasm", "crates/lsp",
  # "xtask",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"            # tiny, improves error ergonomics (can drop if you want)
rand = "0.9.2"
regex = "1"  # gate under feature at crate level

[workspace.lints.rust]
unsafe_code = "forbid"

