[workspace]
members = [
    "crates/ast",
    "crates/lexer",
    "crates/parser",
    "crates/value",
    "crates/interp",
    "crates/stdlib",
    "crates/engine",
    "crates/cli",
    "crates/wasm", "crates/lsp",
    # optional bindings:
    # "crates/capi", "crates/node", "crates/python", "crates/wasm", "crates/lsp",
    # "xtask",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"            # tiny, improves error ergonomics (can drop if you want)
rand = { version = "0.9.2" }
sha2 = "0.10.9"
regex = "1"  # gate under feature at crate level
chrono = "0.4.42"
js-sys = "0.3.81"
clap = { version = "4.5.51", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

