[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for JSLT"
repository = "https://github.com/Kuzat/jslt-rs"

[[bin]]
name = "jslt"
path = "src/main.rs"

[dependencies]
clap = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
engine = { path = "../engine" }

[features]
default = []