[package]
name = "interp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }
ast = { path = "../ast" }
value = { path = "../value" }
stdlib = { path = "../stdlib" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
