[package]
name = "jslt-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jslt-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }

parser = { path = "../parser" }
engine = { path = "../engine" }
interp = { path = "../interp" }
ast = { path = "../ast" }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[lints]
workspace = true
