[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"

[features]
default = []
regex = ["dep:regex"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
regex = { workspace = true, optional = true }
value = { path = "../value" }

[lints]
workspace = true
