[package]
name = "stdlib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["regex", "chrono"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
value = { path = "../value" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true}

[lints]
workspace = true
