[package]
name = "jslt-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.103"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }

engine = { path = "../engine" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true

[features]
# Forward option features if/when you add them
default = []
regex = []
